--- a/cyb3ria0.1.2/rust_server_cyb3ria_xyz/Cargo.toml
+++ b/cyb3ria0.1.2/rust_server_cyb3ria_xyz/Cargo.toml
@@ -14,3 +14,4 @@ tokio-postgres = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
+bcrypt = "0.14"
