--- a/cyb3ria0.1.2/rust_server_cyb3ria_xyz/Cargo.toml
+++ b/cyb3ria0.1.2/rust_server_cyb3ria_xyz/Cargo.toml
@@ -7,11 +7,15 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 futures-util = "0.3"
+futures = "0.3"
 log = "0.4"
 env_logger = "0.9"
 dotenv = "0.15"
-tokio-postgres = "0.7"
+tokio-postgres = { version = "0.7", features = ["with-uuid-1"] } # Добавлена поддержка UUID
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = { version = "1.0", features = ["v4"] }
+uuid = { version = "1.0", features = ["serde", "v4"] } # Добавлена поддержка serde
 bcrypt = "0.14"
+ipnetwork = "0.20"
+chrono = { version = "0.4", features = ["serde"] }
+bytes = "1"
